projects/k8s-automation-project/app/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
  labels:
    name: demo-app
    environment: development
    managed-by: ansible
